--- a/package.json
+++ b/package.json
@@ -3,21 +3,33 @@
   "version": "0.1.0",
   "main": "electron-main.js",
   "scripts": {
-    "start": "electron .",
-    "dev": "concurrently \"vite\" \"electron .\"",
-    "build": "electron-builder"
+    // runs your React UI on localhost:5173
+  "serve": "vite",
+
+  // waits until the UI is up, then launches Electron
+  "electron": "wait-on http://localhost:5173 && electron .",
+
+  // runs both in parallel (Electron will hold until Vite is listening)
+  "dev": "concurrently \"npm run serve\" \"npm run electron\"",
+
+  // just launches Electron (assumes you've already built the UI to ./dist)
+  "start": "electron .",
+
+  // builds your React UI and packages via electron-builder
+  "build": "electron-builder"
   },
   "devDependencies": {
+    "@vitejs/plugin-react": "^3.0.0",
+    "concurrently": "^7.0.0",
     "electron": "^25.0.0",
     "electron-builder": "^23.0.0",
     "vite": "^4.0.0",
-    "concurrently": "^7.0.0",
-    "@vitejs/plugin-react": "^3.0.0"
+    "wait-on": "^8.0.3"
   },
   "dependencies": {
     "chart.js": "^4.0.0",
     "react": "^18.0.0",
-    "react-dom": "^18.0.0",
-    "react-chartjs-2": "^5.0.0"
+    "react-chartjs-2": "^5.0.0",
+    "react-dom": "^18.0.0"
   }
 }
